--- a/tutorials/krylov-subspace/krylov-subspace.ipynb
+++ b/tutorials/krylov-subspace/krylov-subspace.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e77745ad-3315-410e-ba58-a0c0de4e20da",
    "metadata": {},
    "source": [
     "# Calculating ground states on large scale systems: Quantum Krylov Subspaces"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40b20a57-4250-4a6c-bef5-77b7418e59f6",
    "metadata": {},
    "source": [
     "## Step 1: Map problem to quantum native format\n",
@@ -17,7 +19,7 @@
     "\n",
     "Let us now go into more details of how subspace methods, and the quantum Krylov algorithm in particular, work. Given a matrix $H$ for which we want to know its lowest eigenvalue, subspace methods construct of a smaller representation $\\tilde{H}$ of $H$, which captures its properties of interest. In the case of the quantum Krylov algorithm, the Krylov subspace is used to construct the effective representation.\n",
     "\n",
-    "### What is the Krylov subspace? \n",
+    "### What is the Krylov subspace?\n",
     "\n",
     "By definition, the Krylov subspace $K^r$ of order $r$ is the subspace spanned by vectors obtained by multiplying higher powers of $H$, up to $r-1$, with a reference vector $\\vert \\psi \\rangle$.\n",
     "\n",
@@ -54,7 +56,7 @@
     "\n",
     "Where $\\tilde{H}=\\langle \\psi_m \\vert H \\vert \\psi_n \\rangle$ is the Hamiltonian matrix in the Krylov subspace $K_D = \\left\\{ \\vert \\psi_0 \\rangle, \\vert \\psi_1 \\rangle, ..., \\vert \\psi_D \\rangle \\right\\}$ with dimension $D$, $\\vec{c}$ is a vector of variational coefficients that are optimized to get the lowest value of the energy $c_{min}=E_{GS}$ and $\\tilde{S}=\\langle \\psi_m  \\vert \\psi_n \\rangle$ is a matrix of overlaps between states of the Krylov subspace.\n",
     "\n",
-    "Each of the Krylov subspace's vectors are obtained by time-evolving the reference state $\\vert \\psi \\rangle$ under the Hamiltonian $H$ for a certain time: $\\vert \\psi_l \\rangle = U \\vert \\psi \\rangle = e^{-i H t_l}\\vert \\psi \\rangle$. \n",
+    "Each of the Krylov subspace's vectors are obtained by time-evolving the reference state $\\vert \\psi \\rangle$ under the Hamiltonian $H$ for a certain time: $\\vert \\psi_l \\rangle = U \\vert \\psi \\rangle = e^{-i H t_l}\\vert \\psi \\rangle$.\n",
     "\n",
     "We can implement the algorithm on a quantum computer by using the Hadamard test to calculate the matrix elements of $\\tilde{H}$ and $\\tilde{S}$ as expectation values:\n",
     "\n",
@@ -66,15 +68,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76f9d7b8-a621-4898-bf17-bcc6835bea6b",
    "metadata": {},
    "source": [
-    "### Imports and definitions\n",
-    "\n"
+    "### Imports and definitions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "46173580-d03a-480e-a951-71c0f3616af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +116,7 @@
     "    Returns:\n",
     "        lowest k-eigenvalue(s) that are the solution of the regularized generalized eigenvalue problem\n",
     "\n",
-    "    \n",
+    "\n",
     "    \"\"\"\n",
     "    s_vals, s_vecs = sp.linalg.eigh(s)\n",
     "    s_vecs = s_vecs.T\n",
@@ -134,6 +137,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e65d2e5-3525-4165-8540-584c6165ff0f",
    "metadata": {},
    "source": [
     "### Define Hamiltonian\n",
@@ -143,6 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "8b866b36-24ec-41f0-b149-c73df080e9dc",
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +184,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d394395b-fed9-4dbb-8f89-d1c22aae13d6",
    "metadata": {},
    "source": [
     "### Set parameters for the algorithm"
@@ -187,6 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "35b68b45-77f1-4af4-a319-defcde47e540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +206,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "62a51622-6dd7-43e5-bcca-b3b99ed8eab5",
    "metadata": {},
    "source": [
     "### State preparation\n",
@@ -208,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "63e5313d-7500-48ee-8935-cbd5c37c9f10",
    "metadata": {},
    "outputs": [
     {
@@ -232,6 +241,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a20642f0-d562-44dc-899b-916ae3163041",
    "metadata": {},
    "source": [
     "### Time evolution\n",
@@ -242,6 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "b08c05f2-1eff-43ef-ad14-016d6db4141c",
    "metadata": {},
    "outputs": [
     {
@@ -263,11 +274,12 @@
     "\n",
     "qr = QuantumRegister(n_qubits)\n",
     "qc_evol = QuantumCircuit(qr)\n",
-    "qc_evol.append(evol_gate, qargs=qr)\n"
+    "qc_evol.append(evol_gate, qargs=qr)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e49ed96f-2a43-406c-b347-8444089bae24",
    "metadata": {},
    "source": [
     "### Hadamard test\n",
@@ -297,6 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "c90b2fc9-548c-4604-a1cc-0b257026a03e",
    "metadata": {},
    "outputs": [
     {
@@ -352,14 +365,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f29a45a9-4f1b-4df2-9f97-3b1e4b64ad61",
    "metadata": {},
    "source": [
-    "The Hadamard test circuit can be a deep circuit once we transpile to native gates and topology of a device. For example the 5 qubits case considered here "
+    "The Hadamard test circuit can be a deep circuit once we transpile to native gates and topology of a device. For example the 5 qubits case considered here"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "119c5a48-0767-4f76-9c84-ba697ba4ffc5",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +388,7 @@
    "source": [
     "circuit_trans_unopt = transpile(circuits=qc_real.decompose().decompose(), backend=Fake20QV1())\n",
     "\n",
-    "print('The circuit has 2Q gates depth: ', circuit_trans_unopt.depth(lambda x: x[0].num_qubits == 2))\n"
+    "print('The circuit has 2Q gates depth: ', circuit_trans_unopt.depth(lambda x: x[0].num_qubits == 2))"
    ]
   },
   {
@@ -383,6 +398,7 @@
     }
    },
    "cell_type": "markdown",
+   "id": "d17e6264-b692-4665-bb2e-901da33f2037",
    "metadata": {},
    "source": [
     "## Step 2: Optimize circuits and operators\n",
@@ -447,20 +463,22 @@
     "    \\Big)\\\\\n",
     "    &=\\text{Im}\\left[e^{-i\\phi}\\bra{\\psi_0}PU\\ket{\\psi_0}\\right].\n",
     "\\end{split}\n",
-    "\\end{equation}\n"
+    "\\end{equation}"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "43d0f558-9f46-4755-8d4c-b1fe6887fce5",
    "metadata": {},
    "source": [
     "### Decompose time-evolution operator with Suzuki-Trotter decomposition\n",
-    "Instead of implementing the time-evolution operator exactly we can use the Suzuki-Trotter decomposition to implement an approximation of it. Repeating several times a certain order Trotter decomposition gives us further reduction of the error introduced from the approximation. In the following, we directly build the Trotter implementation in the most efficient way for the interaction graph of the Hamiltonian we are considering (nearest neighbor interactions only). In practice we insert Pauli rotations $R_{xx}$, $R_{yy}$, $R_{zz}$ with a parametrized angle $t$ which correspond to the approximate implementation of $e^{-i (XX + YY -ZZ) t}$. This gives a much shallower circuit than what is obtained using the generic `PauliEvolutionGate()` functionality. "
+    "Instead of implementing the time-evolution operator exactly we can use the Suzuki-Trotter decomposition to implement an approximation of it. Repeating several times a certain order Trotter decomposition gives us further reduction of the error introduced from the approximation. In the following, we directly build the Trotter implementation in the most efficient way for the interaction graph of the Hamiltonian we are considering (nearest neighbor interactions only). In practice we insert Pauli rotations $R_{xx}$, $R_{yy}$, $R_{zz}$ with a parametrized angle $t$ which correspond to the approximate implementation of $e^{-i (XX + YY -ZZ) t}$. This gives a much shallower circuit than what is obtained using the generic `PauliEvolutionGate()` functionality."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "bf09c31d-2369-47ba-8369-67fd02791a8c",
    "metadata": {},
    "outputs": [
     {
@@ -503,6 +521,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "acb0c0cc-6cbb-4b74-9a38-1d26c1815b65",
    "metadata": {},
    "source": [
     "### Use an optimized circuit for state preparation"
@@ -511,6 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "47390d8d-5f54-454c-9968-82a65adcecff",
    "metadata": {},
    "outputs": [
     {
@@ -540,6 +560,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83fc0958-5f48-42f7-98de-9ddb0386d6cf",
    "metadata": {},
    "source": [
     "### Template circuits for calculating matrix elements of $\\tilde{S}$ via Hadamard test"
@@ -548,6 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "0d10322f-425b-49ed-94ec-329c860121b9",
    "metadata": {},
    "outputs": [
     {
@@ -597,6 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "5dbeccff-95e6-4e42-bce7-d0b5bdd1eb8b",
    "metadata": {},
    "outputs": [
     {
@@ -617,6 +640,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce298a79-b719-4ca6-aa9b-724d6e3e9126",
    "metadata": {},
    "source": [
     "We have considerably reduced the depth of the Hadamard test with a combination of Trotter approximation and uncontrolled unitaries"
@@ -624,15 +648,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "60552d50-00c7-4512-8412-994fb3afec05",
    "metadata": {},
    "source": [
     "### Template circuits for calculating matrix elements of $\\tilde{H}$ via Hadamard test\n",
-    "The only difference between the circuits used in the Hadamard test will be the phase in the time-evolution operator and the observables measured. Therefore we can prepare a template circuit which represent the generic circuit for the Hadamard test, with placeholders for the gates that depend on the time-evolution operator.\n"
+    "The only difference between the circuits used in the Hadamard test will be the phase in the time-evolution operator and the observables measured. Therefore we can prepare a template circuit which represent the generic circuit for the Hadamard test, with placeholders for the gates that depend on the time-evolution operator."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "06959329-5a18-42f8-be6e-4e58f9edfcdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +682,7 @@
     "qc_real_1.h(0)\n",
     "qc_real_1.compose(controlled_state_prep, list(range(n_qubits+1)), inplace=True)\n",
     "qc_real_1.x(n_qubits)\n",
-    "qc_real_1.compose(qc_evol, list(range(n_qubits)), inplace=True)    \n",
+    "qc_real_1.compose(qc_evol, list(range(n_qubits)), inplace=True)\n",
     "H_real_circ_1 = qc_real_1.decompose().copy()\n",
     "\n",
     "# Second half hadamard test\n",
@@ -678,7 +704,7 @@
     "qc_imag_1.h(0)\n",
     "qc_imag_1.compose(controlled_state_prep, list(range(n_qubits+1)), inplace=True)\n",
     "qc_imag_1.x(n_qubits)\n",
-    "qc_imag_1.compose(qc_evol, list(range(n_qubits)), inplace=True)    \n",
+    "qc_imag_1.compose(qc_evol, list(range(n_qubits)), inplace=True)\n",
     "H_imag_circ_1 = qc_imag_1.decompose().copy()\n",
     "\n",
     "# Second half hadamard test\n",
@@ -692,11 +718,12 @@
     "\n",
     "# Compose them\n",
     "H_imag_circ = H_imag_circ_1\n",
-    "H_imag_circ = H_imag_circ.compose(H_imag_circ_2, list(range(n_qubits+1)))\n"
+    "H_imag_circ = H_imag_circ.compose(H_imag_circ_2, list(range(n_qubits+1)))"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "78c64278-7593-4731-b595-cfcc064b9c1f",
    "metadata": {},
    "source": [
     "## Step 3: Execute using a quantum primitive"
@@ -704,6 +731,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e4294b0-0a87-45bb-9f9b-20957ad479a7",
    "metadata": {},
    "source": [
     "Instantiate the backend and set runtime parameters"
@@ -712,16 +740,18 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "7b4b018f-c02f-4a37-921f-43ecfb04075c",
    "metadata": {},
    "outputs": [],
    "source": [
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=True)\n",
-    "shots = 100000\n"
+    "shots = 100000"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "bff4d1b1-221c-45da-b92a-2517ba36b5a9",
    "metadata": {},
    "source": [
     "Execute circuits for $\\tilde{S}$ with the Estimator"
@@ -730,6 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "db2707bd-08ca-48ae-9205-cef110106126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,6 +787,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c5b1b06-9f15-4607-97cd-c8696a9dab71",
    "metadata": {},
    "source": [
     "And for $\\tilde{H}$"
@@ -764,6 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "55236988-ae39-4e6c-a600-1959b4504422",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,6 +822,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5c7371b-3cc8-4fd2-acbc-f253b060b297",
    "metadata": {},
    "source": [
     "## Step 4: Post-process and analyze results"
@@ -796,6 +830,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3bf8977b-1261-4c67-9bf0-13c06ff959d0",
    "metadata": {},
    "source": [
     "Once we have the results of the circuit executions we can post-process the data to calculate the matrix elements of $\\tilde{S}$"
@@ -804,6 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "3a67e3df-e041-42a9-990b-70941d204455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,6 +864,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e082b3a1-2dfe-40ad-8ecc-9737c36dc455",
    "metadata": {},
    "source": [
     "And the matrix elements of $\\tilde{H}$"
@@ -836,6 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "b8f25460-ed6e-4530-ac25-bc3f51102306",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +885,7 @@
     "            # Get expectation values from experiment\n",
     "            expval_real = H_real_results.data.evs[obs_idx][count]\n",
     "            expval_imag = H_imag_results.data.evs[obs_idx][count]\n",
-    "            \n",
+    "\n",
     "\n",
     "            # # Get expectation values\n",
     "            expval = expval_real + 1j*expval_imag\n",
@@ -864,6 +902,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "920e6eba-692a-4fd2-b32a-2424bd7c79dc",
    "metadata": {},
    "source": [
     "Finally, we can solve the generalized eigenvalue problem for $\\tilde{H}$:\n",
@@ -876,6 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "eceec3fb-abc4-4733-b28c-1f16b471e28d",
    "metadata": {},
    "outputs": [
     {
@@ -917,6 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "dee8888f-ab7b-4944-b696-f689be776541",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3"
   }
  },
  "nbformat": 4,
