--- a/tutorials/variational-quantum-eigensolver/vqe.ipynb
+++ b/tutorials/variational-quantum-eigensolver/vqe.ipynb
@@ -317,6 +317,7 @@
     "        ansatz (QuantumCircuit): Parameterized ansatz circuit\n",
     "        hamiltonian (SparsePauliOp): Operator representation of Hamiltonian\n",
     "        estimator (EstimatorV2): Estimator primitive instance\n",
+    "        callback_dict: dictionary for storing intermediate results\n",
     "\n",
     "    Returns:\n",
     "        float: Energy estimate\n",
@@ -325,7 +326,12 @@
     "    result = estimator.run(pubs=[pub]).result()\n",
     "    energy = result[0].data.evs[0]\n",
     "\n",
-    "    return energy"
+    "    callback_dict[\"iters\"] += 1\n",
+    "    callback_dict[\"prev_vector\"] = params\n",
+    "    callback_dict[\"cost_history\"].append(energy)\n",
+    "    print(f\"Iters. done: {callback_dict[\"iters\"]} [Current cost: {energy}]\")\n",
+    "\n",
+    "return energy"
    ]
   },
   {
@@ -481,12 +487,9 @@
     }
    ],
    "source": [
-    "# To run on local simulator:\n",
-    "#   1. Use the Estimator from qiskit.primitives instead.\n",
-    "#   2. Remove the Session context manager below.\n",
     "with Session(backend=backend) as session:\n",
     "    estimator = Estimator(session=session)\n",
-    "    estimator.options.default_shots = 10_000\n",
+    "    estimator.options.default_shots = 10000\n",
     "\n",
     "    callback = build_callback(ansatz_isa, hamiltonian_isa, estimator, callback_dict)\n",
     "\n",
