--- a/docs/run/primitives-examples.mdx
+++ b/docs/run/primitives-examples.mdx
@@ -40,15 +40,10 @@ from qiskit.circuit.library import IQP
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import SparsePauliOp, random_hermitian
 from qiskit_ibm_runtime import EstimatorV2 as Estimator
-from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
 
-# Run the job locally using FakeSherbrooke
-backend = FakeSherbrooke()
-
-# Uncomment the following lines to run on a real system:
-# from qiskit_ibm_runtime import QiskitRuntimeService
-# service = QiskitRuntimeService()
-# backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+from qiskit_ibm_runtime import QiskitRuntimeService
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 estimator = Estimator(backend)
 
 n_qubits = 127
@@ -119,21 +114,13 @@ from qiskit.circuit.library import IQP
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import SparsePauliOp, random_hermitian
 from qiskit_ibm_runtime import EstimatorV2 as Estimator
-from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
+from qiskit_ibm_runtime import QiskitRuntimeService
 
-# Run the job locally using FakeSherbrooke
-backend = FakeSherbrooke()
-
-# Uncomment the following lines to run on a real system:
-
-# from qiskit_ibm_runtime import QiskitRuntimeService
-# service = QiskitRuntimeService()
-# backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 estimator = Estimator(backend)
 
-# n_qubits = 127
-n_qubits = 4
-
+n_qubits = 127
 rng = np.random.default_rng()
 mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]
 
@@ -161,8 +148,8 @@ for idx in range(len(pubs)):
     pub_result = job_result[idx]
     print(f">>> Expectation values for PUB {idx}: {pub_result.data.evs}")
     print(f">>> Standard errors for PUB {idx}: {pub_result.data.stds}")
- 
-Output: 
+```
+Output:
 ```text
 >>> Expectation values for PUB 0: -0.0263671875
 >>> Standard errors for PUB 0: 0.015619567582387688
@@ -246,16 +233,10 @@ ops = [ZZ, ZX, XZ, XX]
 
 # Step 2: Optimize problem for quantum execution.
 
-from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
-
-# Run the job locally using FakeSherbrooke
-backend = FakeSherbrooke()
-
-# Uncomment the following lines to run on a real system:
-
-# from qiskit_ibm_runtime import QiskitRuntimeService
-# service = QiskitRuntimeService()
-# backend = service.least_busy(operational=True, simulator=False)
+from qiskit_ibm_runtime import QiskitRuntimeService
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
+estimator = Estimator(backend)
 
 estimator = Estimator(backend)
 
@@ -367,21 +348,14 @@ from qiskit.circuit.library import IQP
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import SparsePauliOp, random_hermitian
 from qiskit_ibm_runtime import Session, EstimatorV2 as Estimator
-from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
+from qiskit_ibm_runtime import QiskitRuntimeService
 
-# Run the job locally using FakeSherbrooke
-backend = FakeSherbrooke()
-
-# Uncomment the following lines to run on a real system:
-
-# from qiskit_ibm_runtime import QiskitRuntimeService
-# service = QiskitRuntimeService()
-# backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 estimator = Estimator(backend)
 
-# n_qubits = 127
-n_qubits = 4
- 
+n_qubits = 127
+
 rng = np.random.default_rng(1234)
 mat = np.real(random_hermitian(n_qubits, seed=rng))
 circuit = IQP(mat)
@@ -396,10 +370,7 @@ another_isa_circuit = pm.run(another_circuit)
 isa_observable = observable.apply_layout(isa_circuit.layout)
 another_isa_observable = another_observable.apply_layout(another_isa_circuit.layout)
 
-# Use the following line instead to run on a real system 
-# with Session(service=service, backend=backend) as session:
-with Session(backend=backend) as session:
-
+with Session(service=service, backend=backend) as session:
     estimator = Estimator(session=session)
 
     estimator.options.optimization_level = 1
@@ -417,8 +388,8 @@ with Session(backend=backend) as session:
     # second job
     print(f" > Another Expectation value: {another_result[0].data.evs}")
     print(f" > More Metadata: {another_result[0].metadata}")
-
-    Output:
+```
+Output:
 ```text
  > Expectation value: 0.0048828125
  > Metadata: {'target_precision': 0.015625}
@@ -492,24 +463,18 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.circuit.library import IQP
 from qiskit.quantum_info import random_hermitian
 from qiskit_ibm_runtime import SamplerV2 as Sampler
-from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
+from qiskit_ibm_runtime import QiskitRuntimeService
 
-# Run the job locally using FakeSherbrooke
-backend = FakeSherbrooke()
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+estimator = Estimator(backend)
 
-# Use the commented code to run on a real system:
+n_qubits = 127
 
-# from qiskit_ibm_runtime import QiskitRuntimeService
-# service = QiskitRuntimeService()
-# backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-
-# n_qubits = 127
-n_qubits = 4
- 
 mat = np.real(random_hermitian(n_qubits, seed=1234))
 circuit = IQP(mat)
 circuit.measure_all()
- 
+
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
@@ -523,7 +488,7 @@ result = job.result()
 pub_result = result[0]
 
 print(f" > Counts: {pub_result.data.meas.get_counts()}")
-```  
+```
 Output
 ```text
  > Counts: {'0101': 103, '0100': 195, '0011': 142, '0000': 237, '1010': 26, '0001': 92, '0110': 18, '1111': 19, '0010': 36, '1100': 5, '0111': 42, '1110': 31, '1011': 27, '1101': 18, '1001': 13, '1000': 20}
@@ -574,20 +539,13 @@ from qiskit.circuit.library import IQP
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import random_hermitian
 from qiskit_ibm_runtime import SamplerV2 as Sampler
-from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
+from qiskit_ibm_runtime import QiskitRuntimeService
 
-# Run the job locally using FakeSherbrooke
-backend = FakeSherbrooke()
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+estimator = Estimator(backend)
 
-# Use the commented code to run on a real system:
-
-# from qiskit_ibm_runtime import QiskitRuntimeService
-# service = QiskitRuntimeService()
-# backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-
-
-# n_qubits = 127
-n_qubits = 4
+n_qubits = 127
 
 rng = np.random.default_rng()
 mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]
@@ -660,8 +618,7 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 
 # Step 1: Map classical inputs to a quantum problem
 
-# n_qubits = 127
-n_qubits = 4
+n_qubits = 127
 
 circuit = RealAmplitudes(num_qubits=n_qubits, reps=2)
 circuit.measure_all()
@@ -675,16 +632,11 @@ parameter_values = [
 # Step 2: Optimize problem for quantum execution.
 
 from qiskit_ibm_runtime import SamplerV2 as Sampler
-from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
+from qiskit_ibm_runtime import QiskitRuntimeService
 
-# Run the job locally using FakeSherbrooke
-backend = FakeSherbrooke()
-
-# Use the commented code to run on a real system:
-
-# from qiskit_ibm_runtime import QiskitRuntimeService
-# service = QiskitRuntimeService()
-# backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+estimator = Estimator(backend)
 
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 isa_circuit = pm.run(circuit)
@@ -752,20 +704,14 @@ from qiskit.circuit.library import IQP
 from qiskit.quantum_info import random_hermitian
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit_ibm_runtime import Session, SamplerV2 as Sampler
-from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
+from qiskit_ibm_runtime import QiskitRuntimeService
 
-# Run the job locally using FakeSherbrooke
-backend = FakeSherbrooke()
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+estimator = Estimator(backend)
 
-# Use the commented code to run on a real system:
+n_qubits = 127
 
-# from qiskit_ibm_runtime import QiskitRuntimeService
-# service = QiskitRuntimeService()
-# backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-
-#n_qubits = 127
-n_qubits = 4
-  
 rng = np.random.default_rng(1234)
 mat = np.real(random_hermitian(n_qubits, seed=rng))
 circuit = IQP(mat)
@@ -777,25 +723,24 @@ another_circuit.measure_all()
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 isa_circuit = pm.run(circuit)
 another_isa_circuit = pm.run(another_circuit)
- 
-#with Session(service=service, backend=backend) as session: 
-with Session(backend=backend) as session: 
-    sampler = Sampler(session=session) 
-    job = sampler.run([isa_circuit]) 
-    another_job = sampler.run([another_isa_circuit]) 
+
+#with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
+    sampler = Sampler(session=session)
+    job = sampler.run([isa_circuit])
+    another_job = sampler.run([another_isa_circuit])
     result = job.result()
     another_result = another_job.result()
 
 # first job
 print(f" > Counts for job 1: {result[0].data.meas.get_counts()}")
-
-```  
+```
 Output
 ```text
  > Counts for job 1: {'1110': 39, '0100': 164, '0000': 274, '0010': 40, '0001': 101, '0011': 138, '1101': 20, '1010': 26, '1100': 7, '0101': 83, '0111': 43, '1011': 15, '1001': 14, '1000': 34, '0110': 12, '1111': 14}
 ```
 ```python
-# second job 
+# second job
 print(f" > Counts for job 2: {another_result[0].data.meas.get_counts()}")
 ```
 Output
