--- a/docs/run/primitives-examples.mdx
+++ b/docs/run/primitives-examples.mdx
@@ -446,6 +446,7 @@ print(f" > Expectation values job 2: {another_result.values}")
   </TabItem>
 </Tabs>
 
+<span id="sampler-examples"></span>
 ## Sampler examples
 
 Generate entire error-mitigated quasi-probability distributions sampled from quantum circuit outputs. Leverage Sampler’s capabilities for search and classification algorithms like Grover’s and QVSM.
