add exceptions to qiskit 1.0

--- a/docs/api/qiskit/qpy.mdx
+++ b/docs/api/qiskit/qpy.mdx
@@ -166,7 +166,7 @@ These functions will raise a custom subclass of [`QiskitError`](exceptions#qiski
 
 #### QpyError
 
-<Class id="qiskit.qpy.QpyError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qpy/exceptions.py#L18-L28" signature="qiskit.qpy.QpyError(*message)">
+<Class id="qiskit.qpy.QpyError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qpy/exceptions.py#L18-L28" signature="qiskit.qpy.QpyError(*message)" modifiers="exception">
   Errors raised by the qpy module.
 
   Set the error message.
@@ -202,7 +202,7 @@ If a feature being loaded is deprecated in the corresponding qiskit release, QPY
 
 #### QPYLoadingDeprecatedFeatureWarning
 
-<Class id="qiskit.qpy.QPYLoadingDeprecatedFeatureWarning" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qpy/exceptions.py#L31-L33" signature="qiskit.qpy.QPYLoadingDeprecatedFeatureWarning">
+<Class id="qiskit.qpy.QPYLoadingDeprecatedFeatureWarning" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qpy/exceptions.py#L31-L33" signature="qiskit.qpy.QPYLoadingDeprecatedFeatureWarning" modifiers="exception">
   Visible deprecation warning for QPY loading functions without a stable point in the call stack.
 </Class>
 
