--- a/docs/api/qiskit/circuit.mdx
+++ b/docs/api/qiskit/circuit.mdx
@@ -345,7 +345,7 @@ Almost all circuit functions and methods will raise a [`CircuitError`](#qiskit.c
 
 #### CircuitError
 
-<Class id="qiskit.circuit.CircuitError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/exceptions.py#L18-L19" signature="qiskit.circuit.CircuitError(*message)">
+<Class id="qiskit.circuit.CircuitError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/exceptions.py#L18-L19" signature="qiskit.circuit.CircuitError(*message)" modifiers="exception">
   Base class for errors raised while processing a circuit.
 
   Set the error message.
