--- a/docs/api/qiskit/pulse.mdx
+++ b/docs/api/qiskit/pulse.mdx
@@ -2022,7 +2022,7 @@ There are 1e-06 seconds in 4500 samples.
 
 ### PulseError
 
-<Class id="qiskit.pulse.PulseError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L17-L27" signature="qiskit.pulse.PulseError(*message)">
+<Class id="qiskit.pulse.PulseError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L17-L27" signature="qiskit.pulse.PulseError(*message)" modifiers="exception">
   Errors raised by the pulse module.
 
   Set the error message.
@@ -2030,7 +2030,7 @@ There are 1e-06 seconds in 4500 samples.
 
 ### BackendNotSet
 
-<Class id="qiskit.pulse.BackendNotSet" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L30-L31" signature="qiskit.pulse.BackendNotSet(*message)">
+<Class id="qiskit.pulse.BackendNotSet" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L30-L31" signature="qiskit.pulse.BackendNotSet(*message)" modifiers="exception">
   Raised if the builder context does not have a backend.
 
   Set the error message.
@@ -2038,7 +2038,7 @@ There are 1e-06 seconds in 4500 samples.
 
 ### NoActiveBuilder
 
-<Class id="qiskit.pulse.NoActiveBuilder" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L34-L35" signature="qiskit.pulse.NoActiveBuilder(*message)">
+<Class id="qiskit.pulse.NoActiveBuilder" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L34-L35" signature="qiskit.pulse.NoActiveBuilder(*message)" modifiers="exception">
   Raised if no builder context is active.
 
   Set the error message.
@@ -2046,7 +2046,7 @@ There are 1e-06 seconds in 4500 samples.
 
 ### UnassignedDurationError
 
-<Class id="qiskit.pulse.UnassignedDurationError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L38-L39" signature="qiskit.pulse.UnassignedDurationError(*message)">
+<Class id="qiskit.pulse.UnassignedDurationError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L38-L39" signature="qiskit.pulse.UnassignedDurationError(*message)" modifiers="exception">
   Raised if instruction duration is unassigned.
 
   Set the error message.
@@ -2054,7 +2054,7 @@ There are 1e-06 seconds in 4500 samples.
 
 ### UnassignedReferenceError
 
-<Class id="qiskit.pulse.UnassignedReferenceError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L42-L43" signature="qiskit.pulse.UnassignedReferenceError(*message)">
+<Class id="qiskit.pulse.UnassignedReferenceError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/pulse/exceptions.py#L42-L43" signature="qiskit.pulse.UnassignedReferenceError(*message)" modifiers="exception">
   Raised if subroutine is unassigned.
 
   Set the error message.
