--- a/docs/api/qiskit/qasm2.mdx
+++ b/docs/api/qiskit/qasm2.mdx
@@ -164,7 +164,7 @@ This module defines a generic error type that derives from [`QiskitError`](excep
 
 ### QASM2Error
 
-<Class id="qiskit.qasm2.QASM2Error" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qasm2/exceptions.py#L18-L19" signature="qiskit.qasm2.QASM2Error(*message)">
+<Class id="qiskit.qasm2.QASM2Error" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qasm2/exceptions.py#L18-L19" signature="qiskit.qasm2.QASM2Error(*message)" modifiers="exception">
   A general error raised by the OpenQASM 2 interoperation layer.
 
   Set the error message.
@@ -174,7 +174,7 @@ In cases where the lexer or parser fails due to an invalid OpenQASM 2 file, the 
 
 ### QASM2ParseError
 
-<Class id="qiskit.qasm2.QASM2ParseError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qasm2/exceptions.py#L22-L23" signature="qiskit.qasm2.QASM2ParseError(*message)">
+<Class id="qiskit.qasm2.QASM2ParseError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qasm2/exceptions.py#L22-L23" signature="qiskit.qasm2.QASM2ParseError(*message)" modifiers="exception">
   An error raised because of a failure to parse an OpenQASM 2 file.
 
   Set the error message.
@@ -184,7 +184,7 @@ When the exporters fail to export a circuit, likely because it has structure tha
 
 ### QASM2ExportError
 
-<Class id="qiskit.qasm2.QASM2ExportError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qasm2/exceptions.py#L26-L27" signature="qiskit.qasm2.QASM2ExportError(*message)">
+<Class id="qiskit.qasm2.QASM2ExportError" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/qasm2/exceptions.py#L26-L27" signature="qiskit.qasm2.QASM2ExportError(*message)" modifiers="exception">
   An error raised because of a failure to convert a Qiskit object to an OpenQASM 2 form.
 
   Set the error message.
