--- a/docs/run/primitives-examples.mdx
+++ b/docs/run/primitives-examples.mdx
@@ -206,9 +206,10 @@ from qiskit.quantum_info import SparsePauliOp
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
 
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
 
 # Step 1: Map classical inputs to a quantum problem
-
 theta = Parameter("θ")
 
 chsh_circuit = QuantumCircuit(2)
@@ -227,9 +228,6 @@ XX = SparsePauliOp.from_list([("XX", 1)])
 ops = [ZZ, ZX, XZ, XX]
 
 # Step 2: Optimize problem for quantum execution.
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False)
-
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 chsh_isa_circuit = pm.run(chsh_circuit)
 isa_observables = [operator.apply_layout(chsh_isa_circuit.layout) for operator in ops]
@@ -444,8 +442,8 @@ Use Sampler to return the measurement outcome as a quasi-probability distributio
   <TabItem value="SamplerV2" label="Sampler V2">
 ```python
 import numpy as np
-from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.circuit.library import IQP
+from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import random_hermitian
 from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
 
@@ -457,8 +455,6 @@ backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n
 mat = np.real(random_hermitian(n_qubits, seed=1234))
 circuit = IQP(mat)
 circuit.measure_all()
-
-from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 isa_circuit = pm.run(circuit)
@@ -596,10 +592,12 @@ from qiskit.circuit.library import RealAmplitudes
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
 
-# Step 1: Map classical inputs to a quantum problem
-
 n_qubits = 127
 
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
+
+# Step 1: Map classical inputs to a quantum problem
 circuit = RealAmplitudes(num_qubits=n_qubits, reps=2)
 circuit.measure_all()
 
@@ -610,9 +608,6 @@ parameter_values = [
 ]
 
 # Step 2: Optimize problem for quantum execution.
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 isa_circuit = pm.run(circuit)
 
