--- a/docs/run/circuit-execution.mdx
+++ b/docs/run/circuit-execution.mdx
@@ -41,3 +41,12 @@ sampler = Sampler(backend=backend)
 #Specify a value in the supported range
 sampler.options.execution.rep_delay = 0.0005
 ```
+
+## Next steps
+
+<Admonition type="tip" title="Recommendations">
+  - Try an example in the [Quantum approximate optimization algorithm (QAOA)](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm) tutorial.
+  - Review the [Session API](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Session) reference.
+  - Learn about [batch mode.](run-jobs-batch)
+  - Learn how to [run a job in a session.](run-jobs-in-session)
+</Admonition>
