update next steps

--- a/docs/run/circuit-execution.mdx
+++ b/docs/run/circuit-execution.mdx
@@ -46,7 +46,5 @@ sampler.options.execution.rep_delay = 0.0005
 
 <Admonition type="tip" title="Recommendations">
   - Try an example in the [Quantum approximate optimization algorithm (QAOA)](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm) tutorial.
-  - Review the [Session API](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Session) reference.
-  - Learn about [batch mode.](run-jobs-batch)
-  - Learn how to [run a job in a session.](run-jobs-in-session)
+  - Review how to [get started with primitives.](primitives-get-started)
 </Admonition>
