Quote package but not whole command

--- a/tutorials/variational-quantum-eigensolver/vqe.ipynb
+++ b/tutorials/variational-quantum-eigensolver/vqe.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "Before starting this tutorial, ensure that you have the following installed:\n",
     "\n",
-    "* Qiskit SDK 1.0 or later, with visualization support (`'pip install qiskit[visualization]'`)\n",
+    "* Qiskit SDK 1.0 or later, with visualization support (`pip install 'qiskit[visualization]'`)\n",
     "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
     "* SciPy (`python -m pip install scipy`)"
    ]
