updates from Takashi Imamichi

--- a/tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb
+++ b/tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb
@@ -295,14 +295,14 @@
     }
    ],
    "source": [
-    "binary_prob = [quasi_dist.binary_probabilities() for quasi_dist in result.quasi_dists]\n",
+    "binary_prob = [{k: v / res.data.meas.num_shots for k, v in res.data.meas.get_counts().items()} for res in result]\n",
     "plot_histogram(\n",
     "    binary_prob + [ideal_distribution],\n",
     "    bar_labels=False,\n",
     "    legend=[\n",
     "        \"optimization_level=0\",\n",
-    "        \"optimization_level=3\",\n",
-    "        \"optimization_level=3 + dd\",\n",
+    "        \"optimization_level=1\",\n",
+    "        \"optimization_level=1 + dd\",\n",
     "        \"ideal distribution\",\n",
     "    ],\n",
     ")"
@@ -335,8 +335,8 @@
    "source": [
     "from qiskit.quantum_info import hellinger_fidelity\n",
     "\n",
-    "for counts in result.quasi_dists:\n",
-    "    print(f\"{hellinger_fidelity(counts.binary_probabilities(), ideal_distribution):.3f}\")"
+    "for prob in binary_prob:\n",
+    "    print(f\"{hellinger_fidelity(prob, ideal_distribution):.3f}\")"
    ]
   },
   {
