Remove "warning suppression" code (#1307)
Closes #1279 
Closes #1331 

I removed the "ignore warning" code from all relevant tutorials (in
addition to VQE and CHSH) and ran them all locally on simulators to make
sure we aren't getting warnings. I also added Requirements sections to
VQE and CHSH.

Working on re-generating the output for CHSH since it currently runs on
a 27Q system, but I'm in the queue for 16 hrs.

---------

Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/tutorials/quantum-approximate-optimization-algorithm/qaoa.ipynb
+++ b/tutorials/quantum-approximate-optimization-algorithm/qaoa.ipynb
@@ -14,6 +14,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fb04860",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "* Qiskit SDK 1.0 or later, with visualization support (`pip install 'qiskit[visualization]'`)\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
+    "* SciPy (`python -m pip install scipy`)\n",
+    "* rustworkx (`pip install rustworkx`)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "e291b6c0",
@@ -31,9 +46,6 @@
    "source": [
     "# General imports\n",
     "import numpy as np\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Pre-defined ansatz circuit, operator class and visualization tools\n",
     "from qiskit.circuit.library import QAOAAnsatz\n",
