--- a/tutorials/variational-quantum-eigensolver/vqe.ipynb
+++ b/tutorials/variational-quantum-eigensolver/vqe.ipynb
@@ -21,6 +21,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55b94021",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "* Qiskit SDK 1.0 or later, with visualization support (`pip install 'qiskit[visualization]'`)\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
+    "* SciPy (`python -m pip install scipy`)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "7db2e559",
@@ -40,9 +54,6 @@
    "source": [
     "# General imports\n",
     "import numpy as np\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Pre-defined ansatz circuit and operator class for Hamiltonian\n",
     "from qiskit.circuit.library import EfficientSU2\n",
@@ -306,6 +317,7 @@
     "        ansatz (QuantumCircuit): Parameterized ansatz circuit\n",
     "        hamiltonian (SparsePauliOp): Operator representation of Hamiltonian\n",
     "        estimator (EstimatorV2): Estimator primitive instance\n",
+    "        callback_dict: dictionary for storing intermediate results\n",
     "\n",
     "    Returns:\n",
     "        float: Energy estimate\n",
@@ -313,6 +325,11 @@
     "    pub = (ansatz, [hamiltonian], [params])\n",
     "    result = estimator.run(pubs=[pub]).result()\n",
     "    energy = result[0].data.evs[0]\n",
+    "\n",
+    "    callback_dict[\"iters\"] += 1\n",
+    "    callback_dict[\"prev_vector\"] = params\n",
+    "    callback_dict[\"cost_history\"].append(energy)\n",
+    "    print(f\"Iters. done: {callback_dict['iters']} [Current cost: {energy}]\")\n",
     "\n",
     "    return energy"
    ]
@@ -470,12 +487,9 @@
     }
    ],
    "source": [
-    "# To run on local simulator:\n",
-    "#   1. Use the Estimator from qiskit.primitives instead.\n",
-    "#   2. Remove the Session context manager below.\n",
     "with Session(backend=backend) as session:\n",
     "    estimator = Estimator(session=session)\n",
-    "    estimator.options.default_shots = 10_000\n",
+    "    estimator.options.default_shots = 10000\n",
     "\n",
     "    callback = build_callback(ansatz_isa, hamiltonian_isa, estimator, callback_dict)\n",
     "\n",
