--- a/tutorials/grovers-algorithm/grovers.ipynb
+++ b/tutorials/grovers-algorithm/grovers.ipynb
@@ -14,6 +14,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "152c479f",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "* Qiskit SDK 1.0 or later, with visualization support (`pip install 'qiskit[visualization]'`)\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "54602708",
@@ -33,9 +46,6 @@
    "source": [
     "# Built-in modules\n",
     "import math\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Imports from Qiskit\n",
     "from qiskit import QuantumCircuit\n",
