add cancel instructions

--- a/docs/run/monitor-job.mdx
+++ b/docs/run/monitor-job.mdx
@@ -46,6 +46,10 @@ service.jobs(backend_name=my_backend)
 
 ## Cancel a job
 
+You can cancel a job from the IBM Quantum Platform dashboard either on the Jobs page or the details page for a specific job. Click the menu with three vertical dots (at the end of the row on the Jobs page, or the top of the page on the Job details page), and select Cancel.
+
+In Qiskit, use [`cancel()`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.RuntimeJobV2#cancel) to cancel a job.
+
 
 ## Next steps
 
